fixed alignment

--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 .content{
-    max-width: 1280px;
-    margin: 0;
-    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
